--- a/10_14_Pandas_Tricks.ipynb
+++ b/10_14_Pandas_Tricks.ipynb
@@ -129,6 +129,131 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country                          object\n",
+       "beer_servings                     int64\n",
+       "spirit_servings                   int64\n",
+       "wine_servings                     int64\n",
+       "total_litres_of_pure_alcohol    float64\n",
+       "continent                        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drinks.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Making the dataframe smaller (in terms of memory usage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 193 entries, 0 to 192\n",
+      "Data columns (total 6 columns):\n",
+      "country                         193 non-null object\n",
+      "beer_servings                   193 non-null int64\n",
+      "spirit_servings                 193 non-null int64\n",
+      "wine_servings                   193 non-null int64\n",
+      "total_litres_of_pure_alcohol    193 non-null float64\n",
+      "continent                       193 non-null object\n",
+      "dtypes: float64(1), int64(3), object(2)\n",
+      "memory usage: 9.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# type category takes less space\n",
+    "drinks.info() # takes 9.1 Kb of space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's make country and continent categories\n",
+    "# drinks.astype({'country':'category', 'continent':'category'}).dtypes\n",
+    "drinks[['country', 'continent']].apply(lambda x: x.astype('category'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country                          object\n",
+       "beer_servings                     int64\n",
+       "spirit_servings                   int64\n",
+       "wine_servings                     int64\n",
+       "total_litres_of_pure_alcohol    float64\n",
+       "continent                        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drinks.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 193 entries, 0 to 192\n",
+      "Data columns (total 6 columns):\n",
+      "country                         193 non-null object\n",
+      "beer_servings                   193 non-null int64\n",
+      "spirit_servings                 193 non-null int64\n",
+      "wine_servings                   193 non-null int64\n",
+      "total_litres_of_pure_alcohol    193 non-null float64\n",
+      "continent                       193 non-null object\n",
+      "dtypes: float64(1), int64(3), object(2)\n",
+      "memory usage: 9.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "drinks.info() # usually it saves space. Here the difference is miniscule, so you can't really see it "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -319,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#let's select float64\n",
+    "#let's select float64 columns\n",
     "drinks.select_dtypes(include='float64')"
    ]
   },
@@ -518,6 +643,47 @@
    "source": [
     "# Same thing as above but in a more mundane way: pass the index of rows with top3 countries to iloc\n",
     "drinks.iloc[drinks['beer_servings'].nlargest(3).index,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Split a dataframe into two random subsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample does the trick. They drop these samples from the main dataframe. The leftovers is the second dataframe\n",
+    "drinks_1 = drinks.sample(frac=0.7) # 70% of the dataframe goes here\n",
+    "drinks_2 = drinks[~drinks.index.isin(drinks_1.index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "193"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# len(drinks_1) # 135\n",
+    "# len(drinks_2) # 58\n",
+    "len(drinks) # 193\n",
+    "# Lengths tie!"
    ]
   },
   {
@@ -2727,6 +2893,116 @@
    "source": [
     "# The question is to count the average number of impressions we need to show before a user will create an add\n",
     "# In other words, we need to count 'impression' for every user_id and unit_id where we have 'create_ad' at the end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ML Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test =train_test_split(X,Y,\n",
+    "                                                   test_size=0.25,\n",
+    "                                                   random_state=0,) # splitting the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tree-based methods don't need scaling, while others usually do \n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "\n",
+    "def GetScaledModel(nameOfScaler):\n",
+    "    \n",
+    "    if nameOfScaler == 'standard':\n",
+    "        scaler = StandardScaler()\n",
+    "    elif nameOfScaler =='minmax':\n",
+    "        scaler = MinMaxScaler()\n",
+    "\n",
+    "    pipelines = []\n",
+    "    pipelines.append((nameOfScaler+'LR'  , Pipeline([('Scaler', scaler),('LR'  , LogisticRegression())])))\n",
+    "    pipelines.append((nameOfScaler+'LDA' , Pipeline([('Scaler', scaler),('LDA' , LinearDiscriminantAnalysis())])))\n",
+    "    pipelines.append((nameOfScaler+'KNN' , Pipeline([('Scaler', scaler),('KNN' , KNeighborsClassifier())])))\n",
+    "    pipelines.append((nameOfScaler+'CART', Pipeline([('Scaler', scaler),('CART', DecisionTreeClassifier())])))\n",
+    "    pipelines.append((nameOfScaler+'NB'  , Pipeline([('Scaler', scaler),('NB'  , GaussianNB())])))\n",
+    "    pipelines.append((nameOfScaler+'SVM' , Pipeline([('Scaler', scaler),('SVM' , SVC())])))\n",
+    "    pipelines.append((nameOfScaler+'AB'  , Pipeline([('Scaler', scaler),('AB'  , AdaBoostClassifier())])  ))\n",
+    "    pipelines.append((nameOfScaler+'GBM' , Pipeline([('Scaler', scaler),('GMB' , GradientBoostingClassifier())])  ))\n",
+    "    pipelines.append((nameOfScaler+'RF'  , Pipeline([('Scaler', scaler),('RF'  , RandomForestClassifier())])  ))\n",
+    "    pipelines.append((nameOfScaler+'ET'  , Pipeline([('Scaler', scaler),('ET'  , ExtraTreesClassifier())])  ))\n",
+    "\n",
+    "\n",
+    "    return pipelines "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# models that we will use\n",
+    "def GetBasedModel():\n",
+    "    basedModels = []\n",
+    "    basedModels.append(('LR'   , LogisticRegression()))\n",
+    "    basedModels.append(('LDA'  , LinearDiscriminantAnalysis()))\n",
+    "    basedModels.append(('KNN'  , KNeighborsClassifier()))\n",
+    "    basedModels.append(('CART' , DecisionTreeClassifier()))\n",
+    "    basedModels.append(('NB'   , GaussianNB()))\n",
+    "    basedModels.append(('SVM'  , SVC(probability=True)))\n",
+    "    basedModels.append(('AB'   , AdaBoostClassifier()))\n",
+    "    basedModels.append(('GBM'  , GradientBoostingClassifier()))\n",
+    "    basedModels.append(('RF'   , RandomForestClassifier()))\n",
+    "    basedModels.append(('ET'   , ExtraTreesClassifier()))\n",
+    "   \n",
+    "    return basedModels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# doing cross-validation\n",
+    "def BasedLine2(X_train, y_train,models):\n",
+    "    # Test options and evaluation metric\n",
+    "    num_folds = 10\n",
+    "    scoring = 'accuracy'\n",
+    "\n",
+    "    results = []\n",
+    "    names = []\n",
+    "    for name, model in models:\n",
+    "        kfold = StratifiedKFold(n_splits=num_folds, random_state=SEED)\n",
+    "        cv_results = cross_val_score(model, X_train, y_train, cv=kfold, scoring=scoring)\n",
+    "        results.append(cv_results)\n",
+    "        names.append(name)\n",
+    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "        print(msg)\n",
+    "        \n",
+    "    return names, results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = GetBasedModel()\n",
+    "names, results = BasedLine2(X_train, y_train, models) # returns models' names, accuracy value and the standard deviation"
    ]
   }
  ],
